<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:src="@drawable/ic_undraw_empty_xct9" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_product_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="194dp"
                android:layout_marginEnd="@dimen/thirty_two_dp"
                android:src="@drawable/ic_add_a_photo_24px__1_" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/productTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/product_name"
            android:textColorHint="@color/faint_purple"
            app:startIconDrawable="@drawable/ic_inventory_2_black_18dp"
            app:startIconTint="@color/design_default_color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/price"
            android:textColorHint="@color/faint_purple"
            app:startIconDrawable="@drawable/ic_local_offer_24px__1_"
            app:startIconTint="@color/design_default_color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/available_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/ic_inventory_24px" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/quantityTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:paddingStart="4dp"
                android:text="@string/available"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/four_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_weight="3"
                android:backgroundTint="@color/blue"
                android:text="0"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_16sp" />

            <ImageButton
                android:id="@+id/remove_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:src="@drawable/ic_remove_24px" />

            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:src="@drawable/ic_add_24px" />


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/description"
            android:textColorHint="@color/faint_purple"
            app:startIconDrawable="@drawable/ic_info_24px"
            app:startIconTint="@color/design_default_color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/supplierTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/supplier"
            android:textColorHint="@color/faint_purple"
            app:startIconDrawable="@drawable/ic_person_24px"
            app:startIconTint="@color/design_default_color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supplierEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/contact"
            android:textColorHint="@color/faint_purple"
            app:startIconDrawable="@drawable/ic_local_phone_24px"
            app:startIconTint="@color/design_default_color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/email"
            android:textColorHint="@color/faint_purple"
            app:startIconDrawable="@drawable/ic_email_24px"
            app:startIconTint="@color/design_default_color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/thirty_two_dp"
            android:layout_marginBottom="@dimen/thirty_two_dp"
            android:text="order more" />


    </LinearLayout>

</ScrollView>